# algoritmika_sqlalchemy_task_3_practise

docs/: test_notes_api.http
project_backend/: .dockerignore  Dockerfile  docker-compose.yml  run.py  setup.cfg
project_backend/adapters/api/: __init__.py  app.py  controllers.py
project_backend/adapters/database/: __init__.py  mapping.py  repositories.py  settings.py  tables.py
project_backend/composites/: app.py
project_backend/domain/: __init__.py  dto_classes.py  errors.py  interfaces.py  my_dataclasses.py  services.py
