[metadata]
name = algoritmika_sql_alchemy_task_3_project
version = 1.0.0
description = Наконец-то доделал 3 задание по sqlalchemy. 02.04.2022, 1:18 ночи...
author = Mikhail Buynichenko
author_email = Mikhail.Buynichenko@evraz.com

[options]
packages = find_namespace:
python_requires = ~=3.7.0

install_requires =


[options.extras_require]
dev =
    falcon~=3.0.0
    gunicorn~=20.0.0
    isort~=5.10.0
    pydantic~=1.8.2
    psycopg2-binary~=2.9.2
    sqlalchemy~=1.4.23
    classic-aspects~=0.0.1
    classic-components~=0.0.1
    classic-http-api~=0.0.1
    classic-sql-storage~=0.0.1